add base fee
