# src/main/java/tech/pegasys/net/txapigw/error/ExceptionResponseBody.java
@@ -1,16 +1,25 @@
 package tech.pegasys.net.txapigw.error;
 
-import lombok.AllArgsConstructor;
-import lombok.Getter;
-import lombok.NoArgsConstructor;
-import lombok.Setter;
-
-@Getter
-@Setter
-@NoArgsConstructor
-@AllArgsConstructor
 public class ExceptionResponseBody {
   private int errorCode;
   private String errorLabel;
   private String errorMessage;
+
+  public ExceptionResponseBody(int errorCode, String errorLabel, String errorMessage) {
+    this.errorCode = errorCode;
+    this.errorLabel = errorLabel;
+    this.errorMessage = errorMessage;
+  }
+
+  public int getErrorCode() {
+    return errorCode;
+  }
+
+  public String getErrorLabel() {
+    return errorLabel;
+  }
+
+  public String getErrorMessage() {
+    return errorMessage;
+  }
 }
