# src/main/resources/public/swagger.yaml
@@ -1,148 +1,193 @@
----
-openapi: "3.0.1"
+openapi: 3.0.1
 info:
-  title: "OpenAPI definition"
-  version: "v0"
+  title: OpenAPI definition
+  version: v0
 servers:
-  - url: "http://127.0.0.1:8080"
-    description: "Generated server url"
+  - url: http://127.0.0.1:8080/v3/
+    description: Generated server url
 paths:
+  /basefee:
+    get:
+      tags:
+        - basefee-controller
+      summary: Retrieve the latest base fee
+      operationId: getBaseFee
+      responses:
+        "500":
+          description: Internal Server Error
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/ExceptionResponseBody'
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GetBasefeeResponse'
+  /basefee/{block}:
+    get:
+      tags:
+        - basefee-controller
+      summary: Retrieve the base fee at given block
+      operationId: getBaseFee_1
+      parameters:
+        - name: block
+          in: path
+          description: "block number or one of earliest, latest, pending"
+          required: true
+          schema:
+            type: string
+      responses:
+        "500":
+          description: Internal Server Error
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/ExceptionResponseBody'
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GetBasefeeResponse'
   /tx/legacy/{privateKey}:
     post:
       tags:
-        - "tx-controller"
-      summary: "Submit a legacy Ethereum transaction"
-      operationId: "submitTransaction"
+        - tx-controller
+      summary: Submit a legacy Ethereum transaction
+      operationId: submitTransaction
       parameters:
-        - name: "privateKey"
-          in: "path"
-          description: "private key to use to sign the transaction"
+        - name: privateKey
+          in: path
+          description: private key to use to sign the transaction
           required: true
-          style: "simple"
-          explode: false
           schema:
-            type: "string"
+            type: string
       requestBody:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/Transaction"
+              $ref: '#/components/schemas/Transaction'
         required: true
       responses:
-        "200":
-          description: "OK"
         "500":
-          description: "Internal Server Error"
+          description: Internal Server Error
           content:
             '*/*':
               schema:
-                $ref: "#/components/schemas/ExceptionResponseBody"
+                $ref: '#/components/schemas/ExceptionResponseBody'
+        "200":
+          description: OK
   /tx/eip1559/{privateKey}:
     post:
       tags:
-        - "tx-controller"
-      summary: "Submit an EIP-1559 Ethereum transaction"
-      operationId: "submitTransaction_1"
+        - tx-controller
+      summary: Submit an EIP-1559 Ethereum transaction
+      operationId: submitTransaction_1
       parameters:
-        - name: "privateKey"
-          in: "path"
-          description: "private key to use to sign the transaction"
+        - name: privateKey
+          in: path
+          description: private key to use to sign the transaction
           required: true
-          style: "simple"
-          explode: false
           schema:
-            type: "string"
+            type: string
       requestBody:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/EIP1559Transaction"
+              $ref: '#/components/schemas/EIP1559Transaction'
         required: true
       responses:
-        "200":
-          description: "OK"
         "500":
-          description: "Internal Server Error"
+          description: Internal Server Error
           content:
             '*/*':
               schema:
-                $ref: "#/components/schemas/ExceptionResponseBody"
+                $ref: '#/components/schemas/ExceptionResponseBody'
+        "200":
+          description: OK
 components:
   schemas:
     ExceptionResponseBody:
-      type: "object"
+      type: object
       properties:
         errorCode:
-          type: "integer"
-          format: "int32"
+          type: integer
+          format: int32
         errorLabel:
-          type: "string"
+          type: string
         errorMessage:
-          type: "string"
+          type: string
+    GetBasefeeResponse:
+      type: object
+      properties:
+        baseFee:
+          type: string
     Transaction:
       required:
-        - "gasLimit"
-        - "nonce"
-        - "to"
-        - "value"
-      type: "object"
+        - gasLimit
+        - nonce
+        - to
+        - value
+      type: object
       properties:
         nonce:
-          type: "integer"
+          type: integer
         to:
           maxLength: 42
           minLength: 42
-          type: "string"
-          description: "the recipient address"
-          example: "0x61aCB88dA0DBA1A43592f7cc548b3319Fa615e1b"
+          type: string
+          description: the recipient address
+          example: 0x61aCB88dA0DBA1A43592f7cc548b3319Fa615e1b
         value:
-          type: "integer"
+          type: integer
           description: "the amount of ETH to send, in WEI"
           example: 1000000
         gasPrice:
-          type: "integer"
+          type: integer
           description: "the gas price of the transaction, in WEI"
           example: 1000
         gasLimit:
-          type: "integer"
-          description: "the gas limit of the transaction"
+          type: integer
+          description: the gas limit of the transaction
           example: 21000
     EIP1559Transaction:
       required:
-        - "feecap"
-        - "gasLimit"
-        - "minerBribe"
-        - "nonce"
-        - "to"
-        - "value"
-      type: "object"
+        - feecap
+        - gasLimit
+        - minerBribe
+        - nonce
+        - to
+        - value
+      type: object
       properties:
         nonce:
-          type: "integer"
+          type: integer
         to:
           maxLength: 42
           minLength: 42
-          type: "string"
-          description: "the recipient address"
-          example: "0x61aCB88dA0DBA1A43592f7cc548b3319Fa615e1b"
+          type: string
+          description: the recipient address
+          example: 0x61aCB88dA0DBA1A43592f7cc548b3319Fa615e1b
         value:
-          type: "integer"
+          type: integer
           description: "the amount of ETH to send, in WEI"
           example: 1000000
         gasPrice:
-          type: "integer"
+          type: integer
           description: "the gas price of the transaction, in WEI"
           example: 1000
         gasLimit:
-          type: "integer"
-          description: "the gas limit of the transaction"
+          type: integer
+          description: the gas limit of the transaction
           example: 21000
         minerBribe:
-          type: "integer"
+          type: integer
           description: "the miner bribe, in WEI"
           example: 1000
         feecap:
-          type: "integer"
+          type: integer
           description: "the maximum of ETH the user is willing to pay for the transaction,\
             \ in WEI"
           example: 1000000000
